<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    android:id="@+id/activity_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bbffff"
    >

    <ListView
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/lv1"

        android:layout_above="@+id/btnLessThna35"
        />
    <Button
        android:layout_centerInParent="true"
        android:text="@string/DivA"
        android:layout_above="@+id/btnEqual50"
        android:id="@+id/btnLessThna35"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button

       android:id="@+id/btnEqual50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DivB"

        android:layout_alignParentBottom="true"/>
    <Button

        android:id="@+id/btngrater90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DivE"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/btnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DivC"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btnEqual50"
        android:layout_marginStart="17dp" />

    <Button
        android:id="@+id/btnD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DivD"
        android:layout_toStartOf="@+id/btngrater90"
        android:layout_alignTop="@+id/btngrater90" />

</RelativeLayout>
